src/styles/_login.scss
.login {
    width: 70%;
    max-width: 550px;
    margin: 0 auto;
    padding: 30px 40px;
    height: auto;
    background: #FFFFFF;
    box-shadow: 0px 23px 45px rgba(0, 0, 0, 0.1);
    border-radius: 30px;
    display: flex;
    flex-direction: column;
    @media screen and (max-width: $screen-md) {
        margin: 0;
        width: 100%;
        box-shadow: none;
    }
    &-container {
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    &__title {
        font-size: 24px;
        align-self: center;
        margin-bottom: 20px;
    }
    &__field {
        display: flex;
        flex-direction: column;
        margin-bottom: 10px;
    }
    &__button {
        width: 100%;
        height: 55px;
        margin: 5px 0;
        border-radius: 10px;
        background-color: $blue;
        border: none;
        color: white;
        font-size: 18px;
        font-weight: bolder;
        letter-spacing: 3px;
        text-transform: uppercase;
        outline: 0;
        &:focus {
            outline: 0;
            -webkit-tap-highlight-color: transparent;
        }
        &:hover {
            background-color: darken($color: $blue, $amount: 5%);
            cursor: pointer;
        }
        @media screen and (max-width: $screen-md) {
            &:active {
                background-color: darken($color: $blue, $amount: 5%);
            }
        }
    }
    &__input {
        padding: 0 20px;
        margin: 5px 0;
        width: 100%;
        height: 55px;
        border-radius: 10px;
        background-color: $light_gray;
        border: none;
        font-size: 15px;
        &:focus {
            outline: none;
        }
    }
    &__label {
        &:not(:first-child) {
            margin-top: 5px;
        }
        color: gray;
        margin-bottom: 5px;
    }
}

